--- a/ui/index.html
+++ b/ui/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/index.css" type="text/css">
     <link rel="stylesheet" href="/css/sign_in_up.css" type="text/css">
     <link rel="stylesheet" href="/css/profile.css" type="text/css">
+    <link rel="stylesheet" href="/css/menu.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
