--- a/ui/index.html
+++ b/ui/index.html
@@ -43,5 +43,9 @@
 </body>
 <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"/>
+<script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
+<script>
+    let socket = io('130.193.57.125:3001');
+</script>
 <script type="module" src="dist/main.js"></script>
 </html>
